{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "4585bf2d-5b08-4356-b322-5409a60673ad",
            "actions": [
                {
                    "name": "ChangeGravity",
                    "type": "Button",
                    "id": "b41e5b3b-e2aa-47d0-8ecd-d2f317ad02be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "FromNegativeToPositive",
                    "type": "Button",
                    "id": "775fd059-af6a-4b0a-873d-de197194e254",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "FromPositiveToNegative",
                    "type": "Button",
                    "id": "5371a45e-7550-4f56-970d-eeef9f722411",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d71a0431-db54-4e03-bf6e-61c63989dd7e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeGravity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3798ef3-e63b-448a-b8f6-afc5589a7d7d",
                    "path": "<Keyboard>/a",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FromNegativeToPositive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a575b015-3fc7-4aa0-8be9-329675e49a35",
                    "path": "<Keyboard>/d",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FromPositiveToNegative",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}